--- a/css/oldstyle.css
+++ b/css/oldstyle.css
@@ -1,18 +1,38 @@
 body {
-    text-align: center;
-    color: floralwhite;
-    overflow: hidden;
+	font-family: 'Source Sans Pro', sans-serif;
+	color: floralwhite;
+	text-align: center;
 }
-
-a {
-    color: floralwhite !important;
+h1 {
+	font-size: 64px;
+	left: 0;
+	line-height: 200px;
+	margin: auto;
+	margin-top: -100px;
+	position: absolute;
+	top: 43%;
+	width: 100%;
 }
-
-.jumbotron {
-    background-color:transparent !important;
-    font-family: 'Damion', cursive !important;
+h2 {
+	font-size: 32px;
+	left: 0;
+	line-height: 200px;
+	margin: auto;
+	margin-top: -100px;
+	position: absolute;
+	top: 50%;
+	width: 100%;
 }
-
+h3 {
+	font-size: 20px;
+	left: 0;
+	line-height: 200px;
+	margin: auto;
+	margin-top: -100px;
+	position: absolute;
+	top: 55%;
+	width: 100%;
+}
 video#bgvid {
 	position: fixed;
 	top: 50%;
