--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Source Sans Pro', sans-serif !important;
     text-align: center;
     color: floralwhite;
     overflow: hidden;
@@ -10,8 +11,15 @@ a {
 
 .jumbotron {
     background-color:transparent !important;
-    font-family: 'Damion', cursive !important;
 }
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 60px; /* Set the fixed height of the footer here */
+	line-height: 60px; /* Vertically center the text there */
+  }
 
 video#bgvid {
 	position: fixed;
@@ -29,13 +37,4 @@ video#bgvid {
 	background: url(media/borealis.png) no-repeat;
 	background-size: cover;
 	filter: blur(20px);
-}
-
-@media screen and (max-device-width: 800px) {
-html {
-	background: url(media/borealis.png) #000 no-repeat center center fixed;
-}
-#bgvid {
-	display: none;
-}
 }
