--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ video#bgvid {
 	-moz-transform: translateX(-50%) translateY(-50%);
 	-webkit-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
-	background: url(media/borealis.png) no-repeat;
+	background: url(../media/borealis.png) no-repeat;
 	background-size: cover;
 	filter: blur(20px);
 }
