--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ a {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 60px; /* Set the fixed height of the footer here */
-	line-height: 60px; /* Vertically center the text there */
+	height: 60px;
+	line-height: 60px;
   }
 
 video#bgvid {
